--- a/kubernetes/newsletter-server/flux-system/gitops.yaml
+++ b/kubernetes/newsletter-server/flux-system/gitops.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -10,3 +11,4 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  wait: false
