--- a/kubernetes/newsletter-server/gitops/kratos.yaml
+++ b/kubernetes/newsletter-server/gitops/kratos.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -11,3 +12,5 @@ spec:
     kind: GitRepository
     name: flux-system
   targetNamespace: auth
+  timeout: 5m
+  wait: true
