--- a/kubernetes/newsletter-server/gitops/gateway.yml
+++ b/kubernetes/newsletter-server/gitops/gateway.yml
@@ -2,15 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kratos
+  name: gateway
   namespace: flux-system
 spec:
-  interval: 10m0s
-  path: ./kubernetes/newsletter-server/auth/kratos
+  force: false
+  interval: 10m
+  path: ./kubernetes/newsletter-server/gateway
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  targetNamespace: auth
+    namespace: flux-system
+  targetNamespace: default
   timeout: 5m
   wait: true
