chore: rename listmonk statics service for better maintainability

--- a/blueprints/listmonk-statics/ciliumnetworkpolicy.yml
+++ b/blueprints/listmonk-statics/ciliumnetworkpolicy.yml
@@ -1,7 +1,7 @@
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: static-web-server
+  name: listmonk-statics
 spec:
   endpointSelector:
     matchLabels:
