--- a/blueprints/listmonk-statics/httproute.yml
+++ b/blueprints/listmonk-statics/httproute.yml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: static-web-server
+  name: listmonk-statics
 spec:
   hostnames:
     - newsletter.developer-friendly.blog
@@ -14,7 +14,7 @@ spec:
   rules:
     - backendRefs:
         - kind: Service
-          name: static-web-server
+          name: listmonk-statics
           port: 80
       filters:
         - responseHeaderModifier:
