--- a/kubernetes/newsletter-server/gitops/listmonk-statics.yml
+++ b/kubernetes/newsletter-server/gitops/listmonk-statics.yml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: static-web-server
+  name: listmonk-statics
   namespace: flux-system
 spec:
-  force: false
+  force: true
   interval: 5m0s
-  path: ./kubernetes/newsletter-server/applications/static-web-server
+  path: ./kubernetes/newsletter-server/applications/listmonk-statics
   prune: true
   sourceRef:
     kind: GitRepository
