--- a/kubernetes/newsletter-server/gitops/helm-releases.yml
+++ b/kubernetes/newsletter-server/gitops/helm-releases.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 5m0s
+  interval: 10m
   path: ./kubernetes/newsletter-server/helm-releases
   prune: true
   sourceRef:
