--- a/kubernetes/newsletter-server/gitops/listmonk-exporter.yml
+++ b/kubernetes/newsletter-server/gitops/listmonk-exporter.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 5m0s
+  interval: 10m
   path: ./kubernetes/newsletter-server/applications/listmonk-exporter
   prune: true
   sourceRef:
