--- a/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
@@ -7,4 +7,26 @@ configMapGenerator:
 resources:
   - https://github.com/meysam81/kustomizations//oathkeeper/overlays/vm?ref=v1.3.1
 
+patches:
+  - patch: |
+      - op: add
+        path: /spec/template/spec/containers/0/volumeMounts/-
+        value:
+          name: oathkeeper-rules
+          mountPath: /etc/rules
+          readOnly: true
+      - op: add
+        path: /spec/template/spec/volumes/-
+        value:
+          name: oathkeeper-rules
+          configMap:
+            defaultMode: 0400
+            items:
+              - key: access-rules.json
+                path: access-rules.json
+            name: oathkeeper-rules
+    target:
+      kind: Deployment
+      name: oathkeeper
+
 namespace: auth
