--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -122,6 +122,9 @@ frontend https
   acl atlantis hdr(host) -i atlantis.developer-friendly.blog
   use_backend k8s if atlantis
 
+  acl hubble hdr(host) -i hubble.developer-friendly.blog
+  use_backend k8s if hubble
+
   default_backend not_found
 
 listen apiserver
