feat: deploy capacitor Flux UI

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -125,6 +125,9 @@ frontend https
   acl hubble hdr(host) -i hubble.developer-friendly.blog
   use_backend k8s if hubble
 
+  acl capacitor hdr(host) -i capacitor.developer-friendly.blog
+  use_backend k8s if capacitor
+
   default_backend not_found
 
 listen apiserver
