chore: expose flux endpoint for webhooks

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -128,6 +128,9 @@ frontend https
   acl capacitor hdr(host) -i capacitor.developer-friendly.blog
   use_backend k8s if capacitor
 
+  acl fluxcd hdr(host) -i fluxcd.developer-friendly.blog
+  use_backend k8s if fluxcd
+
   default_backend not_found
 
 listen apiserver
