chore: increase interval to 1h and create fluxcd webhook

--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/external-secrets.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/external-secrets.yml
@@ -4,6 +4,6 @@ metadata:
   name: external-secrets
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 1h
   provider: generic
   url: https://charts.external-secrets.io
