--- a/kubernetes/newsletter-server/gitops.yml
+++ b/kubernetes/newsletter-server/gitops.yml
@@ -5,7 +5,7 @@ metadata:
   name: gitops
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1h
   path: ./kubernetes/newsletter-server/gitops
   prune: true
   sourceRef:
