--- a/kubernetes/newsletter-server/gitops/gateway.yml
+++ b/kubernetes/newsletter-server/gitops/gateway.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 10m
+  interval: 1h
   path: ./kubernetes/newsletter-server/gateway
   prune: true
   sourceRef:
