--- a/kubernetes/newsletter-server/gitops/listmonk-statics.yml
+++ b/kubernetes/newsletter-server/gitops/listmonk-statics.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 10m
+  interval: 1h
   path: ./kubernetes/newsletter-server/applications/listmonk-statics
   prune: true
   sourceRef:
