--- a/kubernetes/newsletter-server/gitops/listmonk.yml
+++ b/kubernetes/newsletter-server/gitops/listmonk.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: true
-  interval: 10m
+  interval: 1h
   path: ./kubernetes/newsletter-server/applications/listmonk
   prune: true
   sourceRef:
