--- a/kubernetes/newsletter-server/gitops/secured-httproutes.yml
+++ b/kubernetes/newsletter-server/gitops/secured-httproutes.yml
@@ -1,17 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kor
+  name: secured-httproutes
   namespace: flux-system
 spec:
   force: false
   interval: 1h
-  path: ./kubernetes/newsletter-server/applications/kor
+  path: ./kubernetes/newsletter-server/auth/secured-httproutes
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: kube-system
+  targetNamespace: auth
   timeout: 5m
   wait: true
