--- a/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
@@ -12,7 +12,7 @@ spec:
       version: 1.15.x
   install:
     createNamespace: true
-  interval: 1h0m0s
+  interval: 1h
   releaseName: cert-manager
   targetNamespace: cert-manager
   valuesFrom:
