--- a/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
@@ -12,7 +12,7 @@ spec:
       version: 0.10.x
   install:
     createNamespace: true
-  interval: 1h0m0s
+  interval: 1h
   releaseName: external-secrets
   targetNamespace: external-secrets
   valuesFrom:
