--- a/kubernetes/newsletter-server/helm-releases/grafana-operator/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/grafana-operator/helmrelease.yml
@@ -8,7 +8,7 @@ spec:
     name: grafana-operator
   install:
     createNamespace: true
-  interval: 1h0m0s
+  interval: 1h
   releaseName: grafana-operator
   targetNamespace: monitoring
   valuesFrom:
