--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/aquasecurity.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/aquasecurity.yml
@@ -4,6 +4,6 @@ metadata:
   name: aquasecurity
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 1h
   provider: generic
   url: https://aquasecurity.github.io/helm-charts/
