--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/cert-manager.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/cert-manager.yml
@@ -4,6 +4,6 @@ metadata:
   name: cert-manager
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 1h
   provider: generic
   url: https://charts.jetstack.io
