--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/grafana-operator.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/grafana-operator.yml
@@ -4,7 +4,7 @@ metadata:
   name: grafana-operator
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 1h
   provider: generic
   ref:
     semver: v5.12.0
