--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/runatlantis.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/runatlantis.yml
@@ -4,6 +4,6 @@ metadata:
   name: runatlantis
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 1h
   provider: generic
   url: https://runatlantis.github.io/helm-charts
