--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/victoria-metrics.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/victoria-metrics.yml
@@ -4,6 +4,6 @@ metadata:
   name: victoria-metrics
   namespace: flux-system
 spec:
-  interval: 60m0s
+  interval: 1h
   provider: generic
   url: https://victoriametrics.github.io/helm-charts/
