--- a/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
@@ -12,7 +12,7 @@ spec:
       version: 6.16.x
   install:
     createNamespace: true
-  interval: 1h0m0s
+  interval: 1h
   releaseName: promtail
   targetNamespace: monitoring
   valuesFrom:
