--- a/kubernetes/newsletter-server/helm-releases/trivy-operator/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/trivy-operator/helmrelease.yml
@@ -12,7 +12,7 @@ spec:
       version: 0.24.x
   install:
     createNamespace: true
-  interval: 1h0m0s
+  interval: 1h
   releaseName: trivy-operator
   targetNamespace: trivy-operator
   valuesFrom:
