--- a/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
+++ b/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: List
 items:
@@ -42,16 +43,16 @@ items:
       name: github-receiver
       namespace: flux-system
     spec:
-      type: github
       events:
-        - "ping"
-        - "push"
-      secretRef:
-        name: fluxcd-receiver-token
+        - ping
+        - push
       resources:
         - apiVersion: source.toolkit.fluxcd.io/v1
           kind: GitRepository
           name: flux-system
+      secretRef:
+        name: fluxcd-receiver-token
+      type: github
   - apiVersion: gateway.networking.k8s.io/v1
     kind: HTTPRoute
     metadata:
@@ -78,6 +79,7 @@ items:
                     value: max-age=31536000; includeSubDomains; preload
               type: ResponseHeaderModifier
           matches:
-            - path:
-                type: PathPrefix
+            - method: POST
+              path:
+                type: Exact
                 value: /
