chore: create the cluster issuer

--- a/kubernetes/newsletter-server/helm-releases/cert-manager/kustomization.yml
+++ b/kubernetes/newsletter-server/helm-releases/cert-manager/kustomization.yml
@@ -5,8 +5,9 @@ configMapGenerator:
   - files:
       - values.yaml=helm-values.yml
     name: cert-manager
+    namespace: flux-system
 
 resources:
   - helmrelease.yml
-
-namespace: flux-system
+  - externalsecret.yml
+  - clusterissuer.yml
