--- a/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
@@ -2,6 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: cert-manager
+  namespace: flux-system
 spec:
   chart:
     spec:
@@ -9,7 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cert-manager
-      version: 1.15.x
+      version: 1.16.x
   install:
     createNamespace: true
   interval: 1h
