--- a/kubernetes/newsletter-server/gateway/gateway.yml
+++ b/kubernetes/newsletter-server/gateway/gateway.yml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: global
-  namespace: default
+  namespace: cert-manager
 spec:
   gatewayClassName: cilium
   listeners:
