fix(LB): convert check to L4

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -150,8 +150,7 @@ listen apiserver
   server k8s 127.0.0.1:6443 check inter 3000 rise 1 fall 3
 
 backend k8s
-  option httpchk GET / HTTP/1.1
-  http-check send hdr Host newsletter.developer-friendly.blog
+  option tcp-check
   server k8s 127.0.0.1:81 check inter 2000 rise 1 fall 3
 
 backend not_found
