fix(gateway): modify reference parent

--- a/blueprints/listmonk-statics/httproute.yml
+++ b/blueprints/listmonk-statics/httproute.yml
@@ -9,7 +9,7 @@ spec:
     - group: gateway.networking.k8s.io
       kind: Gateway
       name: global
-      namespace: default
+      namespace: cert-manager
       sectionName: http
   rules:
     - backendRefs:
