--- a/kubernetes/newsletter-server/auth/protected-httproutes/hubble-ui.yml
+++ b/kubernetes/newsletter-server/auth/protected-httproutes/hubble-ui.yml
@@ -14,7 +14,7 @@ items:
         - group: gateway.networking.k8s.io
           kind: Gateway
           name: global
-          namespace: default
+          namespace: cert-manager
           sectionName: http
       rules:
         - backendRefs:
