--- a/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
+++ b/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
@@ -65,7 +65,7 @@ items:
         - group: gateway.networking.k8s.io
           kind: Gateway
           name: global
-          namespace: default
+          namespace: cert-manager
           sectionName: http
       rules:
         - backendRefs:
