--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,54 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: "hclfmt --terragrunt-check --terragrunt-diff"
 
+  opentofu:
+    if: |
+      (
+        github.event_name == 'schedule' &&
+        github.event.schedule == '0 */12 * * *'
+      ) ||
+      github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_app_terraform_io }}
+    environment: prod
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Create Terraform Plugin Cache Dir
+        run: mkdir -p $TF_PLUGIN_CACHE_DIR
+      - name: Terraform Plugin Cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.TF_PLUGIN_CACHE_DIR }}
+          key: ${{ runner.os }}-terraform-plugin-cache-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-plugin-cache-
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          role-session-name: ci-${{ github.ref_name }}-${{ github.run_id }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - name: Deploy
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tofu_version: ${{ env.tofu_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: ./live
+          tg_command: >-
+            run-all
+              --terragrunt-strict-include
+              --terragrunt-include-dir newsletter-server
+              --terragrunt-include-dir cloudflare
+              --terragrunt-include-dir k8s-oidc-provider
+              --terragrunt-non-interactive
+              apply -auto-approve
+
   ansible-playbook:
     if: |
       (
