--- a/ansible/inventory/host_vars/personal.yml
+++ b/ansible/inventory/host_vars/personal.yml
@@ -1,3 +1,4 @@
 ansible_user: meysam
+ansible_host: "{{ private_networks[0].ip }}"
 ansible_ssh_private_key_file: ~/.ssh/newsletter-server
-ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o PasswordAuthentication=no -o UserKnownHostsFile=/dev/null"
+ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o PasswordAuthentication=no -o UserKnownHostsFile=/dev/null -o ProxyJump=newsletter-server-bastion"
