fix: modify webhook target and CNP

--- a/kubernetes/newsletter-server/auth/kratos-selfservice-ui-node/kustomization.yml
+++ b/kubernetes/newsletter-server/auth/kratos-selfservice-ui-node/kustomization.yml
@@ -1,7 +1,8 @@
 configMapGenerator:
-  - name: kratos-selfservice-ui-node
+  - name: kratos-selfservice-ui-node-envs
     envs:
       - configs.env
+    behavior: merge
 
 resources:
   - https://github.com/meysam81/kustomizations//kratos-selfservice-ui-node/overlays/default/?ref=v1.5.2
