chore(ansible): match domains on host ending

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -105,31 +105,8 @@ frontend https
   http-request track-sc0 src
   http-request deny deny_status 429 if { sc_http_req_rate(0) gt 1000 }
 
-  acl newsletter hdr(host) -i newsletter.developer-friendly.blog
-  use_backend k8s if newsletter
-
-  acl alertmanager hdr(host) -i alertmanager.developer-friendly.blog
-  use_backend k8s if alertmanager
-
-  acl auth hdr(host) -i auth.developer-friendly.blog
-  acl auth_server hdr(host) -i auth-server.developer-friendly.blog
-  use_backend k8s if auth || auth_server
-
-  acl vmsingle hdr(host) -i vmsingle.developer-friendly.blog
-  acl vmagent hdr(host) -i vmagent.developer-friendly.blog
-  use_backend k8s if vmsingle || vmagent
-
-  acl atlantis hdr(host) -i atlantis.developer-friendly.blog
-  use_backend k8s if atlantis
-
-  acl hubble hdr(host) -i hubble.developer-friendly.blog
-  use_backend k8s if hubble
-
-  acl capacitor hdr(host) -i capacitor.developer-friendly.blog
-  use_backend k8s if capacitor
-
-  acl fluxcd hdr(host) -i fluxcd.developer-friendly.blog
-  use_backend k8s if fluxcd
+  acl k8s hdr_end(host) -i developer-friendly.blog
+  use_backend k8s if k8s
 
   default_backend not_found
 
