fix(oathkeeper): modify the oathkeeper CNP label selector

--- a/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
@@ -32,8 +32,7 @@ patches:
 
 replacements:
   - source:
-      kind: Service
-      name: oathkeeper-proxy
+      kind: Deployment
       fieldPath: metadata.name
     targets:
       - select:
