--- a/kubernetes/newsletter-server/gitops/capacitor.yml
+++ b/kubernetes/newsletter-server/gitops/capacitor.yml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: capacitor
+  name: capacitor-parent
   namespace: flux-system
 spec:
   force: false
