--- a/kubernetes/newsletter-server/auth/oathkeeper/ciliumnetworkpolicy.yml
+++ b/kubernetes/newsletter-server/auth/oathkeeper/ciliumnetworkpolicy.yml
@@ -15,3 +15,15 @@ spec:
               protocol: TCP
           rules:
             http: [{}]
+    - fromEndpoints:
+        - matchExpressions:
+            - key: k8s:io.kubernetes.pod.namespace
+              operator: In
+              values:
+                - monitoring
+      toPorts:
+        - ports:
+            - port: "9000"
+              protocol: TCP
+          rules:
+            http: [{}]
