chore: create httproute for headlamp

--- a/blueprints/headlamp/kustomization.yml
+++ b/blueprints/headlamp/kustomization.yml
@@ -7,7 +7,10 @@ configMapGenerator:
     name: headlamp
 
 resources:
-  - helmrepository.yml
+  - ciliumnetworkpolicy.yml
   - helmrelease.yml
+  - helmrepository.yml
+  - httproute.yml
+  - rule.yml
 
 namespace: flux-system
