--- a/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/newsletter-server/auth/oathkeeper/kustomization.yml
@@ -7,6 +7,7 @@ configMapGenerator:
 resources:
   - https://github.com/meysam81/kustomizations//oathkeeper/overlays/vm?ref=v1.6.2
   - ciliumnetworkpolicy.yml
+  - referencegrant.yml
 
 patches:
   - patch: |
