fix: modify namespace of oathkeeper reference

--- a/blueprints/headlamp/httproute.yml
+++ b/blueprints/headlamp/httproute.yml
@@ -15,6 +15,7 @@ spec:
     - backendRefs:
         - kind: Service
           name: oathkeeper-proxy
+          namespace: auth
           port: 80
       filters:
         - responseHeaderModifier:
