fix(headlamp): remove baseurl

--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -27,7 +27,7 @@ initContainers: []
 
 config:
   # -- base url path at which headlamp should run
-  baseURL: https://headlamp.developer-friendly.blog
+  baseURL: ""
   oidc:
     # Option 1:
     # @param config.oidc.secret - OIDC secret configuration
