chore: use google OIDC for headlamp

--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -42,7 +42,7 @@ config:
     #       name: oidc
     secret:
       # -- Generate OIDC secret. If true, will generate a secret using .config.oidc.
-      create: true
+      create: false
       # -- Name of the OIDC secret.
       name: oidc
 
@@ -79,8 +79,8 @@ config:
     #       enabled: true
     #       name: oidc
     externalSecret:
-      enabled: false
-      name: ""
+      enabled: true
+      name: headlamp
   # -- directory to look for plugins
   pluginsDir: "/headlamp/plugins"
   # Extra arguments that can be given to the container. See charts/headlamp/README.md for more information.
