--- a/blueprints/headlamp/kustomization.yml
+++ b/blueprints/headlamp/kustomization.yml
@@ -8,6 +8,7 @@ configMapGenerator:
 
 resources:
   - ciliumnetworkpolicy.yml
+  - externalsecret.yml
   - helmrelease.yml
   - helmrepository.yml
   - httproute.yml
