--- a/blueprints/headlamp/externalsecret.yml
+++ b/blueprints/headlamp/externalsecret.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: headlamp-oidc
+  name: headlamp
 spec:
   data:
     - remoteRef:
