--- a/blueprints/headlamp/helm-values.yml
+++ b/blueprints/headlamp/helm-values.yml
@@ -79,8 +79,8 @@ config:
     #       enabled: true
     #       name: oidc
     externalSecret:
-      enabled: true
-      name: headlamp
+      enabled: false
+      name: ""
   # -- directory to look for plugins
   pluginsDir: "/headlamp/plugins"
   # Extra arguments that can be given to the container. See charts/headlamp/README.md for more information.
