fix: bring the server backup after the k8s upgrade

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -105,6 +105,10 @@ frontend https
   http-request track-sc0 src
   http-request deny deny_status 429 if { sc_http_req_rate(0) gt 1000 }
 
+  acl k8s_host hdr(host) -i k8s.developer-friendly.blog
+  acl k8s_oidc path /.well-known/openid-configuration || path /openid/v1/jwks
+  use_backend k8s_apiserver if k8s_host k8s_oidc
+
   acl k8s hdr_end(host) -i developer-friendly.blog
   use_backend k8s if k8s
 
@@ -129,6 +133,11 @@ listen apiserver
 backend k8s
   option tcp-check
   server k8s 127.0.0.1:81 check inter 2000 rise 1 fall 3
+
+backend k8s_apiserver
+  mode http
+  option ssl-hello-chk
+  server k8s_apiserver 127.0.0.1:6443 ssl verify none check inter 3000 rise 1 fall 3
 
 backend not_found
   http-request deny deny_status 404
